Calculating Query Fetch Time and Improved Query Efficiency