@@ -1,4 +1,3 @@
-// Adjusted test classes to match updated ForwardSecureANNSystem constructor
 package com.fspann.api;
 
 import com.fspann.common.*;
@@ -7,129 +6,117 @@ import com.fspann.crypto.CryptoService;
 import com.fspann.key.KeyManager;
 import com.fspann.key.KeyRotationPolicy;
 import com.fspann.key.KeyRotationServiceImpl;
+import com.fspann.loader.GroundtruthManager;
+import com.fspann.query.core.QueryEvaluationResult;
 import io.micrometer.core.instrument.simple.SimpleMeterRegistry;
-import org.junit.jupiter.api.AfterAll;
-import org.junit.jupiter.api.AfterEach;
-import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 import org.junit.jupiter.api.io.TempDir;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 class ForwardSecureANNSystemIntegrationTest {
-    private static final Logger logger = LoggerFactory.getLogger(ForwardSecureANNSystemIntegrationTest.class);
+
     private ForwardSecureANNSystem system;
 
     @BeforeEach
-    public void setUp() {
-    }
+    void setup() {}
 
     @AfterEach
-    public void cleanup() throws InterruptedException {
+    void tearDown() throws InterruptedException {
         if (system != null) {
             system.shutdown();
             system = null;
         }
-
-        // Clean up RocksDB native resources and finalize threads
         System.gc();
-        Thread.sleep(250); // Ensure RocksDB native finalization completes
+        Thread.sleep(200);
     }
-
-
-    @AfterAll
-    public static void afterAll() throws InterruptedException {
-        System.gc();
-        Thread.sleep(250);
-    }
-
 
     @Test
-    public void simpleEndToEndNearestNeighbor(@TempDir Path tempDir) throws Exception {
-        Path dataFile = tempDir.resolve("data2d.csv");
-        Files.writeString(dataFile, "0.0,0.0\n0.1,0.1\n1.0,1.0\n");
+    void simpleQueryRecallEvaluation(@TempDir Path tempDir) throws Exception {
+        // Create sample dataset
+        Path dataFile = tempDir.resolve("data.csv");
+        Files.writeString(dataFile, "0.0,0.0\n0.1,0.1\n0.9,0.9\n");
 
-        Path configFile = tempDir.resolve("config.json");
-        Files.writeString(configFile, "{" +
-                "\"numShards\":4," +
-                "\"profilerEnabled\":true," +
-                "\"opsThreshold\":2147483647," +
-                "\"ageThresholdMs\":9223372036854775807}");
+        Path queryFile = tempDir.resolve("query.csv");
+        Files.writeString(queryFile, "0.05,0.05\n0.95,0.95");
+
+        Path config = tempDir.resolve("config.json");
+        Files.writeString(config, """
+            {
+              "numShards": 4,
+              "profilerEnabled": true,
+              "opsThreshold": 10000,
+              "ageThresholdMs": 9999999
+            }
+        """);
 
         Path keys = tempDir.resolve("keys.ser");
-        List<Integer> dimensions = Arrays.asList(2);
+        List<Integer> dimensions = List.of(2);
 
         RocksDBMetadataManager metadataManager = new RocksDBMetadataManager(tempDir.toString());
         KeyManager keyManager = new KeyManager(keys.toString());
-        KeyRotationPolicy policy = new KeyRotationPolicy(2, 1000);
+        KeyRotationPolicy policy = new KeyRotationPolicy(100, 10000);
         KeyRotationServiceImpl keyService = new KeyRotationServiceImpl(keyManager, policy, tempDir.toString(), metadataManager, null);
         CryptoService cryptoService = new AesGcmCryptoService(new SimpleMeterRegistry(), keyService, metadataManager);
         keyService.setCryptoService(cryptoService);
 
         system = new ForwardSecureANNSystem(
-                configFile.toString(),
+                config.toString(),
                 dataFile.toString(),
                 keys.toString(),
                 dimensions,
                 tempDir,
-                false,
+                true,
                 metadataManager,
                 cryptoService,
-                1000
+                10
         );
 
-        int indexedCount = system.getIndexedVectorCount();
-        logger.info("Indexed vectors: {}", indexedCount);
-        assertTrue(indexedCount > 0);
+        assertTrue(system.getIndexedVectorCount() > 0);
 
-        List<QueryResult> res = system.query(new double[]{0.05, 0.05}, 1, 2);
-        assertEquals(1, res.size());
-    }
+        // Groundtruth (manually created): for Q0 (close to 0.0), best is 0; for Q1, best is 2
+        GroundtruthManager gt = new GroundtruthManager();
+        gt.put(0, new int[]{0, 1});  // top2 for query 0
+        gt.put(1, new int[]{2, 1});  // top2 for query 1
 
-    @Test
-    public void testVisualization(@TempDir Path tempDir) throws Exception {
-        Path dataFile = tempDir.resolve("data2d.csv");
-        Files.writeString(dataFile, "0.0,0.0\n0.1,0.1\n1.0,1.0\n");
-
-        Path queryFile = tempDir.resolve("query2d.csv");
-        Files.writeString(queryFile, "0.05,0.05\n");
-
-        Path configFile = tempDir.resolve("config.json");
-        Files.writeString(configFile, "{\"numShards\":4, \"profilerEnabled\":true}");
-
-        Path keys = tempDir.resolve("keys.ser");
-        List<Integer> dimensions = Arrays.asList(2);
-
-        RocksDBMetadataManager metadataManager = new RocksDBMetadataManager(tempDir.toString());
-        KeyManager keyManager = new KeyManager(keys.toString());
-        KeyRotationPolicy policy = new KeyRotationPolicy(2, 1000);
-        KeyRotationServiceImpl keyService = new KeyRotationServiceImpl(keyManager, policy, tempDir.toString(), metadataManager, null);
-        CryptoService cryptoService = new AesGcmCryptoService(new SimpleMeterRegistry(), keyService, metadataManager);
-        keyService.setCryptoService(cryptoService);
-
-        ForwardSecureANNSystem localSys = new ForwardSecureANNSystem(
-                configFile.toString(),
-                dataFile.toString(),
-                keys.toString(),
-                dimensions,
-                tempDir,
-                false,
-                metadataManager,
-                cryptoService,
-                1000
+        List<double[]> queries = List.of(
+                new double[]{0.05, 0.05},
+                new double[]{0.95, 0.95}
         );
 
-        int indexedCount = localSys.getIndexedVectorCount();
-        assertTrue(indexedCount > 0);
+        for (int i = 0; i < queries.size(); i++) {
+            QueryToken token = system.cloakQuery(queries.get(i), 2);
+            List<QueryEvaluationResult> evals = system.getQueryService()
+                    .searchWithTopKVariants(token, i, gt);
 
-        localSys.runEndToEnd(dataFile.toString(), queryFile.toString(), 1, 2);
-        localSys.shutdown();
+            assertFalse(evals.isEmpty(), "No evaluation results");
+            for (QueryEvaluationResult r : evals) {
+                assertTrue(r.getRecall() >= 0 && r.getRecall() <= 1.0);
+                assertTrue(r.getRatio() >= 0);
+            }
+            if (system.getProfiler() != null) {
+                for (QueryEvaluationResult r : evals) {
+                    system.getProfiler().recordTopKVariants(
+                            "Q" + i,
+                            r.getTopKRequested(),
+                            r.getRetrieved(),
+                            r.getRatio(),
+                            r.getRecall(),
+                            r.getTimeMs()
+                    );
+                }
+            }
+
+
+        }
+
+        // Export results
+        if (system.getProfiler() != null) {
+            system.getProfiler().exportTopKVariants(tempDir.resolve("topk.csv").toString());
+            assertTrue(Files.exists(tempDir.resolve("topk.csv")));
+        }
     }
 }
